src/objects/Child_of_a_Child_Record_Question__c.object
<CustomObject>
    <fields>
        <fullName>Child_Record_Question__c</fullName>
        <label>Child Record Question</label>
        <referenceTo>Child_Record_Question__c</referenceTo>
        <relationshipLabel>Child of a Child Record Questions</relationshipLabel>
        <relationshipName>Child_of_a_Child_Record_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Number_To_Display_On__c</fullName>
        <label>Page Number To Display On</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Child of a Child Record Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child of a Child Record Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child of a Child Record Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>